LofG-Discourse Forum IPTABLES.txt
########################## Discourse Forum IPTABLES ######################## 
# Generated by iptables-save v1.6.0 on Thu Jun  8 18:03:54 2017
*nat
:PREROUTING ACCEPT [95:7873]
:INPUT ACCEPT [88:7438]
:OUTPUT ACCEPT [71:4244]
:POSTROUTING ACCEPT [103:5912]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 443 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 80 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 172.17.0.2:443
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 80 -j DNAT --to-destination 172.17.0.2:80
COMMIT
#
# Completed on Thu Jun  8 18:03:54 2017
### DOCKER ###
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 443 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 80 -j ACCEPT
-A DOCKER-ISOLATION -j RETURN
#
COMMIT

*filter
:INPUT ACCEPT [3738:626827]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [3590:2048182]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
#
### From Internet ###
-A INPUT -m state --state NEW -m tcp -p tcp -s 0.0.0.0/0 -m multiport --dports 80,443 -j ACCEPT
#
### BNGA office ###
-A INPUT -m state -s 65.87.26.0/24 --state NEW -j ACCEPT
-A INPUT -m state -s 64.95.137.172/32 --state NEW -j ACCEPT
#
### Apark Home ###
-A INPUT -m state -s 73.231.235.144/32 --state NEW -j ACCEPT
###
###
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
###
COMMIT
